<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="current_station">Current Station</string>
    <string name="vk_publish">vk_publish</string>
    <string name="publish_text">А я слушаю [ВСТАВИТЬ РАДИО], а ты нет.
        [ССЫЛКА]
        Опубликовано через mortum5Player</string>
    <string name="button_wall">На стену</string>
    <string name="button_status">В статус</string>
    <string name="button_cancel">Отмена</string>
    <string name="vk">vk</string>
    <string name="share">Поделиться ВКонтакте</string>
    <integer name="com_vk_sdk_AppId">5203886</integer>
</resources>
