<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/share"
        android:id="@+id/textView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/publish_text"
        android:text="@string/publish_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:id="@+id/imageView"
            android:src="@mipmap/publish_new"
            android:contentDescription="@string/vk"
            android:layout_gravity="top"
            android:layout_marginRight="8dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_wall"
            android:background="#9E9E9E"
            android:textColor="#FFFFFF"
            android:id="@+id/button_wall"
            android:layout_marginRight="8dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:background="#9E9E9E"
            android:textColor="#FFFFFF"
            android:id="@+id/button_cancel" />

    </LinearLayout>
</LinearLayout>